--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@
 language: julia
 os:
   - linux
+  - osx
 julia:
   - 0.6
   - 0.7
+  - 1.0
   - nightly
 matrix:
   allow_failures:
@@ -12,8 +14,8 @@ matrix:
   fast_finish: true
 notifications:
   email: false
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("LayerDicts"); Pkg.test("LayerDicts"; coverage=true)'
+#script:
+#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+#  - julia -e 'Pkg.clone(pwd()); Pkg.build("LayerDicts"); Pkg.test("LayerDicts"; coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("LayerDicts")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
