--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,21 @@ os:
 julia:
   - 0.6
   - 0.7
+  - 1.0
   - nightly
+env:
+  - JULIA_PROJECT="@."
 matrix:
   allow_failures:
     - julia: nightly
   fast_finish: true
 notifications:
   email: false
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("LayerDicts"); Pkg.test("LayerDicts"; coverage=true)'
 after_success:
-  - julia -e 'cd(Pkg.dir("LayerDicts")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+  - |
+    julia -e '
+      VERSION >= v"0.7.0-DEV.3656" && using Pkg
+      VERSION >= v"0.7.0-DEV.5183" || cd(Pkg.dir("LayerDicts"))
+      Pkg.add("Coverage"); using Coverage
+      Codecov.submit(process_folder())
+      Coveralls.submit(Coveralls.process_folder())'
