--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,4 @@ matrix:
 notifications:
   email: false
 after_success:
-  - |
-    julia -e '
-      VERSION >= v"0.7.0-DEV.3656" && using Pkg
-      VERSION >= v"0.7.0-DEV.5183" || cd(Pkg.dir("LayerDicts"))
-      Pkg.add("Coverage"); using Coverage
-      Codecov.submit(process_folder())'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
